# longomatch-core

./: .gitignore  .gitmodules  0001-Fix-device-id-retrieval-in-platform-OS-X.patch  LongoMatch.mds  LongoMatch.sln  Makefile.am  NEWS  README  RELEASE  autogen.sh  configure.ac  longomatch.doap
.nuget/: Makefile.am  NuGet.targets
LongoMatch/: AssemblyInfo.cs  GtkOSXApplication.cs  GtkSynchronizationContext.cs  LongoMatch.csproj  LongoMatchGtk.csproj  LongoMatchGtk.mdp  Main.cs  Makefile.am  OSXApplication.cs
LongoMatch.Addins/: AddinsManager.cs  AddinsPathSerializer.cs  ConfigurablePlugin.cs  LongoMatch.Addins.csproj  LongoMatch.Addins.mdp  Makefile.am  PreferencesAttribute.cs  packages.config  paket.references
LongoMatch.Addins/ExtensionPoints/: IAnalisysDashboardsProvider.cs  IAnalsysDashboardsProvider.cs  IConfigModifier.cs  IExportProject.cs  IGStreamerPluginsProvider.cs  IGUIBackend.cs  IImportProject.cs  ILongoMatchPlugin.cs  IMultimediaBackend.cs  IServicesPlugin.cs  IStatsUI.cs
LongoMatch.Core/: App.cs  Catalog.cs  Config.cs  ConfigLongoMatch.cs  Device.cs  DeviceID.cs  DirectoryMonitor.cs  FodyWeavers.xml  LongoMatch.Core.Net45.csproj  LongoMatch.Core.csproj  LongoMatch.Core.mdp  LongoMatch.Core.projitems  LongoMatch.Core.shproj  Makefile.am  ModuleInitializer.cs  Resources.cs  StyleConf.cs  Utils.cs  packages.config  paket.references
LongoMatch.Core/Common/: Area.cs  CaptureSettings.cs  Cloner.cs  Color.cs  ConsoleCrayon.cs  Constants.cs  ConstantsLongoMatch.cs  Coordinates.cs  Device.cs  EncodingProfiles.cs  EncodingQuality.cs  EncodingSettings.cs  EncryptedObject.cs  Enums.cs  EnumsLongomatch.cs  EnvironmentUtils.cs  EventsBroker.cs  EventsBrokerLongomatch.cs  EventsFilter.cs  Exceptions.cs  ExceptionsLongoMatch.cs  ExtensionMethods.cs  Gettext.cs  Hotkeys.cs  Image.cs  ImageBase.cs  Job.cs  Keyboard.cs  Log.cs  PlayList.cs  PlaysFilter.cs  QueryFilter.cs  Registry.cs  Seeker.cs  SerializableObject.cs  Serializer.cs  SysInfo.cs  Utils.cs  VideoStandards.cs
LongoMatch.Core/Events/: Events.cs
LongoMatch.Core/Filters/: EventsFilter.cs  ProjectsFilter.cs  QueryFilter.cs
LongoMatch.Core/Handlers/: Drawing.cs  Handlers.cs  HandlersLongoMatch.cs  Misc.cs  Multimedia.cs  Queries.cs  RetEventArgs.cs
LongoMatch.Core/Hotkeys/: LMGeneralUIHotkeys.cs  LMUIHotkeys.cs
LongoMatch.Core/Interfaces/: IChanged.cs  IDataBaseManager.cs  IDatabase.cs  IDevice.cs  IDirectoryMonitor.cs  IIDObject.cs  IKpiService.cs  ILMTeamEditorDealer.cs  ILMTeamTaggerDealer.cs  IPlayerController.cs  IPlaylistElement.cs  IProgressReport.cs  IProject.cs  IProjectsImporter.cs  IRenderingJobsManager.cs  IService.cs  IStorable.cs  IStorableObjectsCache.cs  IStorage.cs  IStorageManager.cs  ITag.cs  ITemplates.cs  ITemplatesLongoMatch.cs  ITemplatesService.cs  ITimelineNode.cs
LongoMatch.Core/KPI/: HockeyPlatformHelperMono.cs  KpiService.cs
LongoMatch.Core/Migration/: DashboardMigration.cs  ProjectMigration.cs  TeamMigration.cs  TypesMappings.cs
LongoMatch.Core/Resources/: Icons.cs  Images.cs  Strings.cs
LongoMatch.Core/Serialization/: LongoMatchPropertyIndex.cs  LongoMatchPropertyPreload.cs  ObjectChangedParser.cs  Serializer.cs  StorableNode.cs
LongoMatch.Core/Services/: RegistryAttribute.cs  RegistryScanner.cs
LongoMatch.Drawing/: BackgroundCanvas.cs  Canvas.cs  Common.cs  Constants.cs  Init.cs  LongoMatch.Drawing.Net45.csproj  LongoMatch.Drawing.csproj  LongoMatch.Drawing.mdp  LongoMatch.Drawing.projitems  LongoMatch.Drawing.shproj  Makefile.am  ObjectCanvas.cs  PlayslistCellRenderer.cs  SelectionCanvas.cs  TestCanvas.cs  Utils.cs  enums.cs
LongoMatch.Drawing.Cairo/: CairoBackend.cs  CairoContext.cs  LongoMatch.Drawing.Cairo.csproj  LongoMatch.Drawing.Cairo.mdp  Makefile.am  Surface.cs  WidgetWrapper.cs
LongoMatch.GUI/: IMenuExtensionEntry.cs  LongoMatch.GUI.csproj  LongoMatch.GUI.dll.config  LongoMatch.GUI.mdp  Makefile.am  MenuExtensionEntry.cs  MenuLoaderBase.cs  ProjectFileMenuLoader.cs  ProjectToolsMenuLoader.cs
LongoMatch.GUI.Helpers/: AssemblyInfo.cs  ExternalWindow.cs  FileChooserHelper.cs  GtkGlue.cs  IconNotebookHelper.cs  LongoMatch.GUI.Helpers.csproj  LongoMatch.GUI.Helpers.dll.config  LongoMatch.GUI.Helpers.mdp  Makefile.am  MessagesHelpers.cs  Misc.cs  MyClass.cs
LongoMatch.GUI.Multimedia/: LongoMatch.GUI.Multimedia.csproj  LongoMatch.GUI.Multimedia.mdp  Makefile.am  MultimediaToolkit.cs
LongoMatch.Migration/: Converter.cs  DataBase.cs  LongoMatch.Migration.csproj  LongoMatch.Migration.mdp  MainWindow.cs  Makefile.am  Program.cs
LongoMatch.Multimedia/: LongoMatch.Multimedia.csproj  LongoMatch.Multimedia.mdp  Makefile.am  MultimediaFactory.cs  PlayerController.cs
LongoMatch.Plugins.GStreamer/: Assembly.cs  GStreamerRestricted.cs  GStreamerRestricted.dll.config  LongoMatch.Plugins.GStreamer.csproj  Makefile.am  packages.config
LongoMatch.Plugins.Stats/: LongoMatch.Plugins.Stats.csproj  Makefile.am  MyClass.cs  ProjectStats.cs  StatsUIPlugin.cs  packages.config  paket.references
LongoMatch.Services/: CoreServices.cs  DataBase.cs  DataBaseManager.cs  EventsManager.cs  FileDB.cs  FileStorage.cs  HotKeysManager.cs  ImportMonitorServices.cs  LMLicenseLimitationsService.cs  LongoMatch.Services.Net45.csproj  LongoMatch.Services.csproj  LongoMatch.Services.mdp  LongoMatch.Services.projitems  LongoMatch.Services.shproj  Makefile.am  PlayerController.cs  PlaylistManager.cs  PresentationsManager.cs  PreviewService.cs  ProjectImporter.cs  ProjectsManager.cs  RenderingJobsManager.cs  TemplatesService.cs  ToolsManager.cs  UpdatesNotifier.cs  packages.config  paket.references
Tests/: DummyBusyDialog.cs  LocalDatabase.cs  LocalStorage.cs  Makefile.am  Setup.cs  Tests.csproj  Tests.dll.covcfg  Tests.mdp  Utils.cs  packages.config  print_coverage.py
pkgconfig/: Makefile.am  longomatch-addins.pc.in  longomatch-core.pc.in  longomatch-db.pc.in  longomatch-drawing-cairo.pc.in  longomatch-drawing.pc.in  longomatch-gui-helpers.pc.in  longomatch-gui-multimedia.pc.in  longomatch-gui.pc.in  longomatch-multimedia.pc.in  longomatch-oxyplot.pc.in  longomatch-services.pc.in
(+1017 files in other folders)
