ASSEMBLY = LongoMatch.Addins
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_ADDINS)

SOURCES = AddinsManager.cs \
	ExtensionPoints/IConfigModifier.cs \
	ExtensionPoints/IExportProject.cs \
	ExtensionPoints/IImportProject.cs \
	ExtensionPoints/IMultimediaBackend.cs

RESOURCES = 

include $(top_srcdir)/build/build.mk

