ASSEMBLY = LongoMatch.Addins
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_ADDINS)

SOURCES = AddinsManager.cs \
	ExtensionPoints/IAnalisysDashboardsProvider.cs \
	ExtensionPoints/IConfigModifier.cs \
	ExtensionPoints/IExportProject.cs \
	ExtensionPoints/IGStreamerPluginsProvider.cs \
	ExtensionPoints/IImportProject.cs \
	ExtensionPoints/ILongoMatchPlugin.cs \
	ExtensionPoints/IMultimediaBackend.cs

RESOURCES = 

include $(top_srcdir)/build/build.mk

