ASSEMBLY = LongoMatch.Addins
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_ADDINS)

SOURCES = ../AssemblyInfo/AssemblyInfo.cs \
	AddinsManager.cs \
	ConfigurablePlugin.cs \
	ExtensionPoints/IAnalisysDashboardsProvider.cs \
	ExtensionPoints/IConfigModifier.cs \
	ExtensionPoints/IExportProject.cs \
	ExtensionPoints/IGStreamerPluginsProvider.cs \
	ExtensionPoints/IGUIBackend.cs \
	ExtensionPoints/IImportProject.cs \
	ExtensionPoints/ILongoMatchPlugin.cs \
	ExtensionPoints/IMultimediaBackend.cs \
	ExtensionPoints/IServicesPlugin.cs \
	ExtensionPoints/IStatsUI.cs \
	PreferencesAttribute.cs

RESOURCES = 

include $(top_srcdir)/build/build.mk

