ASSEMBLY = LongoMatch.Core
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_CORE)

SOURCES = Common/Area.cs \
	Common/CaptureSettings.cs \
	Common/Cloner.cs \
	Common/Color.cs \
	Common/ConsoleCrayon.cs \
	Common/Constants.cs \
	Common/Device.cs \
	Common/EncodingProfiles.cs \
	Common/EncodingQuality.cs \
	Common/EncodingSettings.cs \
	Common/Enums.cs \
	Common/EventsBroker.cs \
	Common/EventsFilter.cs \
	Common/Exceptions.cs \
	Common/ExtensionMethods.cs \
	Common/Gettext.cs \
	Common/Hotkeys.cs \
	Common/Image.cs \
	Common/Job.cs \
	Common/Keyboard.cs \
	Common/Log.cs \
	Common/Serializer.cs \
	Common/SysInfo.cs \
	Common/VideoStandards.cs \
	Config.cs \
	Handlers/Drawing.cs \
	Handlers/Handlers.cs \
	Handlers/Multimedia.cs \
	Interfaces/Drawing/ICanvas.cs \
	Interfaces/Drawing/IDrawable.cs \
	Interfaces/Drawing/IDrawingToolkit.cs \
	Interfaces/Drawing/IWidget.cs \
	Interfaces/GUI/IAnalysisWindow.cs \
	Interfaces/GUI/IBusyDialog.cs \
	Interfaces/GUI/ICapturerBin.cs \
	Interfaces/GUI/IGUIToolkit.cs \
	Interfaces/GUI/IMainController.cs \
	Interfaces/GUI/IPanel.cs \
	Interfaces/GUI/IPlayerBin.cs \
	Interfaces/GUI/IRenderingStateBar.cs \
	Interfaces/IDataBaseManager.cs \
	Interfaces/IDatabase.cs \
	Interfaces/IIDObject.cs \
	Interfaces/IPlaylistElement.cs \
	Interfaces/IProjectsImporter.cs \
	Interfaces/IRenderingJobsManager.cs \
	Interfaces/ITemplates.cs \
	Interfaces/ITemplatesService.cs \
	Interfaces/Multimedia/ICapturer.cs \
	Interfaces/Multimedia/IDiscoverer.cs \
	Interfaces/Multimedia/IFramesCapturer.cs \
	Interfaces/Multimedia/IMultimediaToolkit.cs \
	Interfaces/Multimedia/IPlayer.cs \
	Interfaces/Multimedia/IRemuxer.cs \
	Interfaces/Multimedia/IVideoConverter.cs \
	Interfaces/Multimedia/IVideoEditor.cs \
	Stats/EventTypeStats.cs \
	Stats/PercentualStat.cs \
	Stats/PlayersStats.cs \
	Stats/ProjectStats.cs \
	Stats/Stat.cs \
	Stats/SubCategoryStat.cs \
	Store/Coordinates.cs \
	Store/DashboardButton.cs \
	Store/Drawables/Angle.cs \
	Store/Drawables/Circle.cs \
	Store/Drawables/Counter.cs \
	Store/Drawables/Cross.cs \
	Store/Drawables/Drawable.cs \
	Store/Drawables/Ellipse.cs \
	Store/Drawables/Line.cs \
	Store/Drawables/MultiPoints.cs \
	Store/Drawables/Quadrilateral.cs \
	Store/Drawables/Rectangle.cs \
	Store/Drawables/Selection.cs \
	Store/Drawables/Text.cs \
	Store/EventType.cs \
	Store/FrameDrawing.cs \
	Store/HotKey.cs \
	Store/MediaFile.cs \
	Store/MediaFileSet.cs \
	Store/PenaltyCard.cs \
	Store/Period.cs \
	Store/PixbufTimeNode.cs \
	Store/Player.cs \
	Store/Playlists/Playlist.cs \
	Store/Playlists/PlaylistDrawing.cs \
	Store/Playlists/PlaylistImage.cs \
	Store/Playlists/PlaylistPlayElement.cs \
	Store/Point.cs \
	Store/Project.cs \
	Store/ProjectDescription.cs \
	Store/Score.cs \
	Store/Tag.cs \
	Store/Templates/Dashboard.cs \
	Store/Templates/TeamTemplate.cs \
	Store/Time.cs \
	Store/TimeNode.cs \
	Store/TimelineEvent.cs \
	Store/TimelineNode.cs \
	Store/Timer.cs \
	StyleConf.cs

RESOURCES = 

include $(top_srcdir)/build/build.mk
