ASSEMBLY = LongoMatch.Drawing.Cairo
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_DRAWING_CAIRO)

SOURCES = CairoBackend.cs \
	CairoContext.cs \
	Surface.cs \
	WidgetWrapper.cs

RESOURCES = $(top_srcdir)/images/cursors/text \
	$(top_srcdir)/images/cursors/rect \
	$(top_srcdir)/images/cursors/number \
	$(top_srcdir)/images/cursors/freehand \
	$(top_srcdir)/images/cursors/ellipse \
	$(top_srcdir)/images/cursors/arrow \
	$(top_srcdir)/images/tools/draw-eraser.png \
	$(top_srcdir)/images/tools/draw-cross.png \
	$(top_srcdir)/images/cursors/player

include $(top_srcdir)/build/build.mk
