ASSEMBLY = LongoMatch.Drawing.Cairo
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_DRAWING_CAIRO)

SOURCES = ../AssemblyInfo/AssemblyInfo.cs \
	CairoBackend.cs \
	CairoContext.cs \
	Surface.cs \
	WidgetWrapper.cs

RESOURCES = $(top_srcdir)/images/cursors/text \
	$(top_srcdir)/images/cursors/rect \
	$(top_srcdir)/images/cursors/number \
	$(top_srcdir)/images/cursors/freehand \
	$(top_srcdir)/images/cursors/ellipse \
	$(top_srcdir)/images/cursors/arrow \
	$(top_srcdir)/images/cursors/player \
	$(top_srcdir)/images/cursors/eraser \
	$(top_srcdir)/images/cursors/cross \
	$(top_srcdir)/images/cursors/zoom \
	$(top_srcdir)/images/cursors/hand_opened \
	$(top_srcdir)/images/cursors/hand_closed \
	$(top_srcdir)/images/cursors/hand_select

include $(top_srcdir)/build/build.mk
