
ASSEMBLY = LongoMatch.Drawing
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_DRAWING)

SOURCES = Canvas.cs \
	CanvasObjects/BenchObject.cs \
	CanvasObjects/CanvasObject.cs \
	CanvasObjects/CardObject.cs \
	CanvasObjects/CategoryLabel.cs \
	CanvasObjects/CategoryObject.cs \
	CanvasObjects/CounterObject.cs \
	CanvasObjects/CrossObject.cs \
	CanvasObjects/EllipseObject.cs \
	CanvasObjects/FieldObject.cs \
	CanvasObjects/LineObject.cs \
	CanvasObjects/PlayObject.cs \
	CanvasObjects/PlayerObject.cs \
	CanvasObjects/PlayersTaggerObject.cs \
	CanvasObjects/PositionObject.cs \
	CanvasObjects/QuadrilateralObject.cs \
	CanvasObjects/RectangleObject.cs \
	CanvasObjects/ScoreObject.cs \
	CanvasObjects/TagObject.cs \
	CanvasObjects/TaggerObject.cs \
	CanvasObjects/TextObject.cs \
	CanvasObjects/TimeNodeObject.cs \
	CanvasObjects/TimelineObject.cs \
	CanvasObjects/TimerObject.cs \
	Constants.cs \
	PlayslistCellRenderer.cs \
	Utils.cs \
	Widgets/Blackboard.cs \
	Widgets/CategoriesLabels.cs \
	Widgets/DashboardCanvas.cs \
	Widgets/PlaysTimeline.cs \
	Widgets/PositionTagger.cs \
	Widgets/TeamTagger.cs \
	Widgets/TimersTimeline.cs \
	Widgets/Timerule.cs

RESOURCES = 

include $(top_srcdir)/build/build.mk
