
ASSEMBLY = LongoMatch.Drawing
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_DRAWING)

SOURCES = ../AssemblyInfo/AssemblyInfo.cs \
	Canvas.cs \
	CanvasObjects/BenchObject.cs \
	CanvasObjects/Blackboard/CounterObject.cs \
	CanvasObjects/Blackboard/CrossObject.cs \
	CanvasObjects/Blackboard/EllipseObject.cs \
	CanvasObjects/Blackboard/LineObject.cs \
	CanvasObjects/Blackboard/QuadrilateralObject.cs \
	CanvasObjects/Blackboard/RectangleObject.cs \
	CanvasObjects/Blackboard/TextObject.cs \
	CanvasObjects/ButtonObject.cs \
	CanvasObjects/CameraObject.cs \
	CanvasObjects/CanvasObject.cs \
	CanvasObjects/Dashboard/CardObject.cs \
	CanvasObjects/Dashboard/CategoryObject.cs \
	CanvasObjects/Dashboard/DashboardButtonObject.cs \
	CanvasObjects/Dashboard/ScoreObject.cs \
	CanvasObjects/Dashboard/TagObject.cs \
	CanvasObjects/Dashboard/TimerObject.cs \
	CanvasObjects/FieldObject.cs \
	CanvasObjects/LabelObject.cs \
	CanvasObjects/NeedleObject.cs \
	CanvasObjects/PlayObject.cs \
	CanvasObjects/PlayerObject.cs \
	CanvasObjects/PlayersTaggerObject.cs \
	CanvasObjects/PositionObject.cs \
	CanvasObjects/TimeNodeObject.cs \
	CanvasObjects/TimelineObject.cs \
	Constants.cs \
	PlayslistCellRenderer.cs \
	Utils.cs \
	Widgets/Blackboard.cs \
	Widgets/CamerasLabels.cs \
	Widgets/CamerasTimeline.cs \
	Widgets/DashboardCanvas.cs \
	Widgets/PlaysTimeline.cs \
	Widgets/PositionTagger.cs \
	Widgets/TeamTagger.cs \
	Widgets/TimelineLabels.cs \
	Widgets/TimersTimeline.cs \
	Widgets/Timerule.cs

RESOURCES = 

include $(top_srcdir)/build/build.mk
