
ASSEMBLY = LongoMatch.Drawing
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_DRAWING)

SOURCES = ../AssemblyInfo/AssemblyInfo.cs \
	Canvas.cs \
	CanvasObjects/Blackboard/CounterObject.cs \
	CanvasObjects/Blackboard/CrossObject.cs \
	CanvasObjects/Blackboard/EllipseObject.cs \
	CanvasObjects/Blackboard/LineObject.cs \
	CanvasObjects/Blackboard/QuadrilateralObject.cs \
	CanvasObjects/Blackboard/RectangleObject.cs \
	CanvasObjects/Blackboard/TextObject.cs \
	CanvasObjects/ButtonObject.cs \
	CanvasObjects/CanvasObject.cs \
	CanvasObjects/Dashboard/ActionLinkObject.cs \
	CanvasObjects/Dashboard/CardObject.cs \
	CanvasObjects/Dashboard/CategoryObject.cs \
	CanvasObjects/Dashboard/DashboardButtonObject.cs \
	CanvasObjects/Dashboard/LinkAnchorObject.cs \
	CanvasObjects/Dashboard/ScoreObject.cs \
	CanvasObjects/Dashboard/TagObject.cs \
	CanvasObjects/Dashboard/TimerObject.cs \
	CanvasObjects/PositionObject.cs \
	CanvasObjects/Teams/BenchObject.cs \
	CanvasObjects/Teams/FieldObject.cs \
	CanvasObjects/Teams/PlayerObject.cs \
	CanvasObjects/Teams/PlayersTaggerObject.cs \
	CanvasObjects/Timeline/CameraObject.cs \
	CanvasObjects/Timeline/LabelObject.cs \
	CanvasObjects/Timeline/NeedleObject.cs \
	CanvasObjects/Timeline/TimeNodeObject.cs \
	CanvasObjects/Timeline/TimelineEventObject.cs \
	CanvasObjects/Timeline/TimelineObject.cs \
	Constants.cs \
	PlayslistCellRenderer.cs \
	Utils.cs \
	Widgets/Blackboard.cs \
	Widgets/CamerasLabels.cs \
	Widgets/CamerasTimeline.cs \
	Widgets/DashboardCanvas.cs \
	Widgets/PlaysTimeline.cs \
	Widgets/PositionTagger.cs \
	Widgets/TeamTagger.cs \
	Widgets/TimelineLabels.cs \
	Widgets/TimersTimeline.cs \
	Widgets/Timerule.cs

RESOURCES = 

include $(top_srcdir)/build/build.mk
