
ASSEMBLY = LongoMatch.GUI.Helpers
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_GUI_HELPERS)

SOURCES = ../AssemblyInfo/AssemblyInfo.cs \
	ExternalWindow.cs \
	FileChooserHelper.cs \
	GtkGlue.cs \
	MessagesHelpers.cs \
	Misc.cs

RESOURCES = 

DLLCONFIG = LongoMatch.GUI.Helpers.dll.config

include $(top_srcdir)/build/build.mk

EXTRA_DIST += LongoMatch.GUI.Helpers.dll.config
