ASSEMBLY = LongoMatch.GUI.Multimedia
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_GUI_MULTIMEDIA)

SOURCES = Gui/CapturerBin.cs \
	Gui/PlayerCapturerBin.cs \
	Gui/PlayerView.cs \
	Gui/Utils/FramesCapturer.cs \
	Gui/Utils/Remuxer.cs \
	Gui/VideoWindow.cs \
	Gui/VolumeWindow.cs \
	MultimediaToolkit.cs \
	gtk-gui/LongoMatch.Gui.CapturerBin.cs \
	gtk-gui/LongoMatch.Gui.PlayerCapturerBin.cs \
	gtk-gui/LongoMatch.Gui.PlayerView.cs \
	gtk-gui/LongoMatch.Gui.VideoWindow.cs \
	gtk-gui/LongoMatch.Gui.VolumeWindow.cs \
	gtk-gui/generated.cs

RESOURCES = gtk-gui/gui.stetic

include $(top_srcdir)/build/build.mk

