ASSEMBLY = LongoMatch.GUI
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_GUI)

SOURCES = Gui/Cairo.cs \
	Gui/Component/AnalysisComponent.cs \
	Gui/Component/BackgroundWidget.cs \
	Gui/Component/CategoryProperties.cs \
	Gui/Component/CodingWidget.cs \
	Gui/Component/CoordinatesTagger.cs \
	Gui/Component/DashboardWidget.cs \
	Gui/Component/DatePicker.cs \
	Gui/Component/GeneralPreferencesPanel.cs \
	Gui/Component/LiveAnalysisPreferences.cs \
	Gui/Component/MediaFileChooser.cs \
	Gui/Component/MediaFileSetSelection.cs \
	Gui/Component/NotesWidget.cs \
	Gui/Component/PeriodsRecoder.cs \
	Gui/Component/PlayListWidget.cs \
	Gui/Component/PlayersListTreeWidget.cs \
	Gui/Component/PlaysCoordinatesTagger.cs \
	Gui/Component/PlaysListTreeWidget.cs \
	Gui/Component/PlaysPositionViewer.cs \
	Gui/Component/PlaysSelectionWidget.cs \
	Gui/Component/ProjectListWidget.cs \
	Gui/Component/ProjectPeriods.cs \
	Gui/Component/RenderingStateBar.cs \
	Gui/Component/Stats/CategoriesViewer.cs \
	Gui/Component/Stats/CategoryViewer.cs \
	Gui/Component/Stats/GameViewer.cs \
	Gui/Component/Stats/PangoTextMeasurer.cs \
	Gui/Component/Stats/PlayerCategoriesViewer.cs \
	Gui/Component/Stats/PlayerCategoryViewer.cs \
	Gui/Component/Stats/PlayerSubcategoryViewer.cs \
	Gui/Component/Stats/PlayersViewer.cs \
	Gui/Component/Stats/Plotter.cs \
	Gui/Component/Stats/SubcategoryViewer.cs \
	Gui/Component/TeamTemplateEditor.cs \
	Gui/Component/TeamsComboBox.cs \
	Gui/Component/Timeline.cs \
	Gui/Component/VideoPreferencesPanel.cs \
	Gui/Dialog/About.cs \
	Gui/Dialog/BusyDialog.cs \
	Gui/Dialog/CalendarDialog.cs \
	Gui/Dialog/DatabasesManager.cs \
	Gui/Dialog/DrawingTool.cs \
	Gui/Dialog/EditCategoryDialog.cs \
	Gui/Dialog/EndCaptureDialog.cs \
	Gui/Dialog/EntryDialog.cs \
	Gui/Dialog/EventTypeTagsEditor.cs \
	Gui/Dialog/FramesCaptureProgressDialog.cs \
	Gui/Dialog/HotKeySelectorDialog.cs \
	Gui/Dialog/PlayEditor.cs \
	Gui/Dialog/RenderingJobsDialog.cs \
	Gui/Dialog/ShortcutsHelpDialog.cs \
	Gui/Dialog/SnapshotsDialog.cs \
	Gui/Dialog/StatsViewer.cs \
	Gui/Dialog/SubstitutionsEditor.cs \
	Gui/Dialog/UpdateDialog.cs \
	Gui/Dialog/VideoConversionTool.cs \
	Gui/Dialog/VideoEditionProperties.cs \
	Gui/GUIToolkit.cs \
	Gui/GtkGlue.cs \
	Gui/MainWindow.cs \
	Gui/Menu/PeriodsMenu.cs \
	Gui/Menu/PlaysMenu.cs \
	Gui/Panel/NewProjectPanel.cs \
	Gui/Panel/OpenProjectPanel.cs \
	Gui/Panel/PanelHeader.cs \
	Gui/Panel/PreferencesPanel.cs \
	Gui/Panel/ProjectsManagerPanel.cs \
	Gui/Panel/SportsTemplatesPanel.cs \
	Gui/Panel/TeamsTemplatesPanel.cs \
	Gui/Panel/WelcomePanel.cs \
	Gui/TransparentDrawingArea.cs \
	Gui/TreeView/CategoriesFilterTreeView.cs \
	Gui/TreeView/FilterBaseView.cs \
	Gui/TreeView/ListTreeViewBase.cs \
	Gui/TreeView/PlayListTreeView.cs \
	Gui/TreeView/PlayersFilterTreeView.cs \
	Gui/TreeView/PlayersTreeView.cs \
	Gui/TreeView/PlaysTreeView.cs \
	Gui/TreeView/RenderingJobsTreeView.cs \
	gtk-gui/LongoMatch.Gui.Component.AnalysisComponent.cs \
	gtk-gui/LongoMatch.Gui.Component.BackgroundWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.CategoryProperties.cs \
	gtk-gui/LongoMatch.Gui.Component.CodingWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.CoordinatesTagger.cs \
	gtk-gui/LongoMatch.Gui.Component.DashboardWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.DatePicker.cs \
	gtk-gui/LongoMatch.Gui.Component.GameViewer.cs \
	gtk-gui/LongoMatch.Gui.Component.GeneralPreferencesPanel.cs \
	gtk-gui/LongoMatch.Gui.Component.LiveAnalysisPreferences.cs \
	gtk-gui/LongoMatch.Gui.Component.MediaFileChooser.cs \
	gtk-gui/LongoMatch.Gui.Component.MediaFileSetSelection.cs \
	gtk-gui/LongoMatch.Gui.Component.NotesWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.PeriodsRecoder.cs \
	gtk-gui/LongoMatch.Gui.Component.PlayListWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.PlayersListTreeWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.PlaysCoordinatesTagger.cs \
	gtk-gui/LongoMatch.Gui.Component.PlaysListTreeWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.PlaysPositionViewer.cs \
	gtk-gui/LongoMatch.Gui.Component.PlaysSelectionWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.ProjectListWidget.cs \
	gtk-gui/LongoMatch.Gui.Component.ProjectPeriods.cs \
	gtk-gui/LongoMatch.Gui.Component.RenderingStateBar.cs \
	gtk-gui/LongoMatch.Gui.Component.Stats.CategoriesViewer.cs \
	gtk-gui/LongoMatch.Gui.Component.Stats.CategoryViewer.cs \
	gtk-gui/LongoMatch.Gui.Component.Stats.PlayerCategoriesViewer.cs \
	gtk-gui/LongoMatch.Gui.Component.Stats.PlayerCategoryViewer.cs \
	gtk-gui/LongoMatch.Gui.Component.Stats.PlayerSubcategoryViewer.cs \
	gtk-gui/LongoMatch.Gui.Component.Stats.PlayersViewer.cs \
	gtk-gui/LongoMatch.Gui.Component.Stats.Plotter.cs \
	gtk-gui/LongoMatch.Gui.Component.Stats.SubCategoryViewer.cs \
	gtk-gui/LongoMatch.Gui.Component.TeamTemplateEditor.cs \
	gtk-gui/LongoMatch.Gui.Component.Timeline.cs \
	gtk-gui/LongoMatch.Gui.Component.VideoPreferencesPanel.cs \
	gtk-gui/LongoMatch.Gui.Dialog.BusyDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.CalendarDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.DatabasesManager.cs \
	gtk-gui/LongoMatch.Gui.Dialog.DrawingTool.cs \
	gtk-gui/LongoMatch.Gui.Dialog.EditCategoryDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.EndCaptureDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.EntryDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.EventTypeTagsEditor.cs \
	gtk-gui/LongoMatch.Gui.Dialog.FramesCaptureProgressDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.HotKeySelectorDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.PlayEditor.cs \
	gtk-gui/LongoMatch.Gui.Dialog.RenderingJobsDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.ShortcutsHelpDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.SnapshotsDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.StatsViewer.cs \
	gtk-gui/LongoMatch.Gui.Dialog.SubstitutionsEditor.cs \
	gtk-gui/LongoMatch.Gui.Dialog.UpdateDialog.cs \
	gtk-gui/LongoMatch.Gui.Dialog.VideoConversionTool.cs \
	gtk-gui/LongoMatch.Gui.Dialog.VideoEditionProperties.cs \
	gtk-gui/LongoMatch.Gui.MainWindow.cs \
	gtk-gui/LongoMatch.Gui.Panel.NewProjectPanel.cs \
	gtk-gui/LongoMatch.Gui.Panel.OpenProjectPanel.cs \
	gtk-gui/LongoMatch.Gui.Panel.PanelHeader.cs \
	gtk-gui/LongoMatch.Gui.Panel.PreferencesPanel.cs \
	gtk-gui/LongoMatch.Gui.Panel.ProjectsManagerPanel.cs \
	gtk-gui/LongoMatch.Gui.Panel.SportsTemplatesPanel.cs \
	gtk-gui/LongoMatch.Gui.Panel.TeamsTemplatesPanel.cs \
	gtk-gui/LongoMatch.Gui.Panel.WelcomePanel.cs \
	gtk-gui/LongoMatch.Gui.Popup.TransparentDrawingArea.cs \
	gtk-gui/generated.cs

RESOURCES = gtk-gui/gui.stetic \
	$(top_srcdir)/images/video.png \
	$(top_srcdir)/images/background.png \
	$(top_srcdir)/images/tools/dash-line.svg \
	$(top_srcdir)/images/tools/line.svg \
	$(top_srcdir)/images/tools/line-double-dot.svg \
	$(top_srcdir)/images/tools/line-dot.svg \
	$(top_srcdir)/images/tools/line-double-arrow.svg \
	$(top_srcdir)/images/tools/line-arrow.svg \
	$(top_srcdir)/data/images/longomatch-light-bg.svg \
	$(top_srcdir)/data/images/longomatch-dark-bg.svg

DLLCONFIG = LongoMatch.GUI.dll.config

include $(top_srcdir)/build/build.mk

EXTRA_DIST += LongoMatch.GUI.dll.config
