ASSEMBLY = LongoMatch.Plugins.GStreamer
TARGET = library
INSTALL_DIR = $(pkglibdir)/plugins/LongoMatch.Plugins.GStreamer/

LINK = $(REF_DEP_LONGOMATCH_PLUGINS_GSTREAMER)

SOURCES = Assembly.cs \
	GStreamerRestricted.cs

RESOURCES = 

DLLCONFIG = LongoMatch.Plugins.GStreamer.dll.config

include $(top_srcdir)/build/build.mk

