ASSEMBLY = LongoMatch.Plugins.Stats
TARGET = library
INSTALL_DIR = $(pkglibdir)/plugins

LINK = $(REF_DEP_LONGOMATCH_PLUGINS_STATS)

SOURCES = Stats/CategoriesViewer.cs \
	Stats/CategoryViewer.cs \
	Stats/GameViewer.cs \
	Stats/PangoTextMeasurer.cs \
	Stats/PlayerCategoriesViewer.cs \
	Stats/PlayerCategoryViewer.cs \
	Stats/PlayerSubcategoryViewer.cs \
	Stats/PlayersViewer.cs \
	Stats/Plotter.cs \
	Stats/StatsDialog.cs \
	Stats/SubcategoryViewer.cs \
	StatsUIPlugin.cs \
	gtk-gui/LongoMatch.Plugins.Stats.CategoriesViewer.cs \
	gtk-gui/LongoMatch.Plugins.Stats.CategoryViewer.cs \
	gtk-gui/LongoMatch.Plugins.Stats.GameViewer.cs \
	gtk-gui/LongoMatch.Plugins.Stats.PlayerCategoriesViewer.cs \
	gtk-gui/LongoMatch.Plugins.Stats.PlayerCategoryViewer.cs \
	gtk-gui/LongoMatch.Plugins.Stats.PlayerSubcategoryViewer.cs \
	gtk-gui/LongoMatch.Plugins.Stats.PlayersViewer.cs \
	gtk-gui/LongoMatch.Plugins.Stats.Plotter.cs \
	gtk-gui/LongoMatch.Plugins.Stats.StatsDialog.cs \
	gtk-gui/LongoMatch.Plugins.Stats.SubCategoryViewer.cs \
	gtk-gui/generated.cs

RESOURCES = gtk-gui/gui.stetic

include $(top_srcdir)/build/build.mk
