ASSEMBLY = LongoMatch.Services
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_SERVICES)

SOURCES = Services/CoreServices.cs \
	Services/DataBaseManager.cs \
	Services/EventsManager.cs \
	Services/FileDB.cs \
	Services/HotKeysManager.cs \
	Services/PlaylistManager.cs \
	Services/ProjectsManager.cs \
	Services/RenderingJobsManager.cs \
	Services/TemplatesService.cs \
	Services/ToolsManager.cs

include $(top_srcdir)/build/build.mk
