ASSEMBLY = LongoMatch.Services
TARGET = library

LINK = $(REF_DEP_LONGOMATCH_SERVICES)

SOURCES = ../AssemblyInfo/AssemblyInfo.cs \
	CoreServices.cs \
	DataBaseManager.cs \
	EventsManager.cs \
	FileDB.cs \
	FileStorage.cs \
	HotKeysManager.cs \
	PlayerController.cs \
	PlaylistManager.cs \
	ProjectsManager.cs \
	RenderingJobsManager.cs \
	TemplatesService.cs \
	ToolsManager.cs

include $(top_srcdir)/build/build.mk
