IMAGES = $(top_srcdir)/images/logo.svg \
         $(top_srcdir)/images/background.png
LOGO_48 = $(top_srcdir)/images/48x48/longomatch.png
LOGO = $(top_srcdir)/images/scalable/longomatch.svg
bin_SCRIPTS = longomatch
DESKTOP_FILE = longomatch.desktop.in

PROJECT_FILE = LongoMatch.csproj
ASSEMBLY=LongoMatch.exe
include $(top_srcdir)/build/build.mk
